# parsav_ika_otonom_2026

./: .gitignore  Dockerfile.jetson  LICENSE  README.md  requirements.txt
docs/: DEVELOPER_GUIDE.md  architecture.md
ika_bringup/: package.xml  setup.cfg  setup.py
ika_bringup/config/: ekf.yaml  nav2_params.yaml
ika_bringup/launch/: ika.launch.py
ika_description/: CMakeLists.txt  package.xml
ika_description/urdf/: ika.urdf
ika_gazebo/: CMakeLists.txt  package.xml
ika_gazebo/models/parkur/: model.config  model.sdf
ika_gazebo/models/parkur/meshes/: cizgiler.dae  dik_egim.dae  sudan_gecis.dae  yan_egim.dae  yol.dae  zemin.dae
ika_gazebo/models/parkur/meshes/tabelalar/: Thumbs.db
ika_gazebo/src/: sliding_obstacle_plugin.cpp
ika_gazebo/worlds/: parkur.world  teknofest_parkur.world
ika_interfaces/: CMakeLists.txt  package.xml
ika_interfaces/msg/: AracDurumu.msg  AtisDurumu.msg  EngelDurumu.msg  TabelaTespit.msg
ika_mission_manager/: package.xml  setup.cfg  setup.py
ika_mission_manager/ika_mission_manager/: mission_manager.py  watchdog_node.py
ika_perception/: package.xml  setup.cfg  setup.py
ika_perception/ika_perception/: lidar_processor.py  tabela_detector.py
ika_perception/scripts/: optimize_model.py
mission_manager/: package.xml  setup.cfg  setup.py
mission_manager/mission_manager/: mission_manager_node.py
