<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ika_bringup</name>
  <version>0.0.0</version>
  <description>İKA Bringup Package</description>
  <maintainer email="kadir@todo.todo">kadir</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ika_description</exec_depend>
  <exec_depend>ika_gazebo</exec_depend>
  <exec_depend>ika_mission_manager</exec_depend>
  <exec_depend>ika_perception</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>